# zero2prod

./: .env  .swp  Cargo.toml  README.md
migrations/: 20230403161619_create_subscriptions_table.sql  20230410143109_create_subscriptions_table.sql  20240313123420_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
