[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = { version = "4.5.1" }
tokio = { version = "1.33.0",  features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.7.0", features = ["v4"]}
chrono = "0.4.35"
env_logger = "0.11.3"
log = "0.4.21"
[dev-dependencies]
reqwest = "0.11.22"


